@@ -24,6 +24,8 @@ package org.apache.tools.ant.taskdefs;
  */
 public class ManifestException extends Exception {
 
+    private static final long serialVersionUID = 7685634200457515207L;
+
     /**
      * Constructs an exception with the given descriptive message.
      * @param msg Description of or information about the exception.
